--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
@@ -30,11 +30,38 @@
 .contacto_aclaracion{
   font-size: 14px;
   margin-bottom: 5px;
-
 }
 
 
 
+.contacto-whatsapp-contenedor{
+  @include flexbox;       
+  @include flex-direction(row);
+  @include align-items(center); 
+  padding:8px;
+  border-radius:8px;
+  background-color: white;
+
+}
+.contacto-whatsapp-img{
+  width: 70px;
+  height: auto;
+  border-radius:100%;
+  margin-right: 20px;
+}
+
+.contacto-whatsapp-texto{
+  letter-spacing: 2px;
+  color: $color-gris-text;
+  padding: 10px; 
+  border-radius:8px;
+  width: 200px;
+}
+
+.contacto-whatsapp-icono{
+  font-size: 28px;
+  padding:4px 10px;
+}
 
 
  @media (min-width: $BrackPoint-Secundario){
