--- a/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
+++ b/resources/assets/sass/Secciones_y_Helpers/Seccion_contacto.scss
@@ -19,18 +19,19 @@
 }
 
 .contacto_name{
-  font-size: 28px;
-  margin-bottom: 10px;
-  padding:8px;
-  border-radius:4px;  
+    font-size: 28px;  
+    padding: 2px 8px;
+    border-radius: 4px;
   
 }
 
 .contacto_aclaracion{
-  font-size: 14px;
-  letter-spacing:1.5px;
-  margin-bottom: 15px;
-  border-bottom:solid 4px $color-3;
+    font-size: 12px;
+    letter-spacing: 1.5px;
+    margin-bottom: 15px;    
+    width: 300px;
+    text-align: center;
+  
 }
 
 
